--- a/app/src/main/res/layout/item_knowledge_adapter.xml
+++ b/app/src/main/res/layout/item_knowledge_adapter.xml
@@ -3,39 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/tv_title"
-        android:textSize="18sp"
+        app:layout_constraintRight_toLeftOf="@id/icon_arrow"
+        android:gravity="left"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="12dp"
+        android:textSize="16sp"
         android:textColor="@color/black"
-        android:layout_marginEnd="12dp"
-        android:layout_marginStart="12dp"/>
+        android:id="@+id/tv_title"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
-        android:layout_marginStart="12dp"
+        app:layout_constraintRight_toLeftOf="@id/icon_arrow"
+        android:gravity="left"
+        android:id="@+id/tv_children_title"
+        android:lineSpacingExtra="5dp"
         android:layout_marginTop="10dp"
-        android:id="@+id/tv_time"
-        android:textSize="12sp"/>
+        android:layout_marginStart="12dp"/>
 
     <ImageView
+        android:id="@+id/icon_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/icon_un_collection"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="12dp"
+        android:src="@mipmap/icon_right_arrow"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        android:id="@+id/iv_collection"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
