--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,6 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <cc.jianke.testplugin.wanandroid.view.TitleBarView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tbv_title=""/>
+
         <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
