--- a/app/src/main/res/layout/activity_coin.xml
+++ b/app/src/main/res/layout/activity_coin.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
     <LinearLayout
-        android:background="@color/white"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.youth.banner.Banner
+        <cc.jianke.testplugin.wanandroid.view.TitleBarView
+            android:id="@+id/view_title_bar"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:id="@+id/banner"/>
+            android:layout_height="wrap_content"
+            app:tbv_title="积分记录"
+            app:tbv_end_text="排行"/>
 
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/smart_layout">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
