--- a/app/src/main/res/layout/item_coin_adapter.xml
+++ b/app/src/main/res/layout/item_coin_adapter.xml
@@ -7,32 +7,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:textColor="@color/color_333333"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/tv_title"/>
+        android:textSize="16sp"
+        android:textColor="@color/color_333333"
+        android:id="@+id/tv_user_name"/>
 
     <TextView
-        android:textColor="@color/color_666666"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBaseline_toBaselineOf="@id/tv_title"
-        app:layout_constraintRight_toLeftOf="@id/iv_arrow"
-        android:layout_marginEnd="10dp"
-        android:id="@+id/tv_desc"/>
-
-    <ImageView
-        android:id="@+id/iv_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/icon_right_arrow"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        android:textColor="@color/color_666666"
+        app:layout_constraintBaseline_toBaselineOf="@id/tv_user_name"
+        android:id="@+id/tv_coin"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
