--- a/app/src/main/res/layout/item_coin_record_adapter.xml
+++ b/app/src/main/res/layout/item_coin_record_adapter.xml
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:paddingStart="12dp"
-    android:paddingEnd="12dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="12dp">
 
     <TextView
-        android:textColor="@color/color_333333"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/tv_title"/>
+        android:textSize="16sp"
+        android:textColor="@color/color_333333"
+        android:text=""
+        android:id="@+id/tv_coin_reason"/>
 
     <TextView
         android:textColor="@color/color_666666"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBaseline_toBaselineOf="@id/tv_title"
-        app:layout_constraintRight_toLeftOf="@id/iv_arrow"
-        android:layout_marginEnd="10dp"
-        android:id="@+id/tv_desc"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_coin_reason"
+        android:text=""
+        android:id="@+id/tv_coin_desc"
+        android:layout_marginTop="10dp"/>
 
-    <ImageView
-        android:id="@+id/iv_arrow"
+    <TextView
+        android:textColor="@color/color_666666"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/icon_right_arrow"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        android:id="@+id/tv_coin_count"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
