--- a/app/src/main/res/layout/item_home_adapter.xml
+++ b/app/src/main/res/layout/item_home_adapter.xml
@@ -14,11 +14,12 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/tv_title"
         android:textSize="18sp"
-        android:textColor="@color/black"
+        android:textColor="@color/color_333333"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"/>
 
     <TextView
+        android:textColor="@color/color_666666"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
