--- a/app/src/main/res/layout/item_knowledge_adapter.xml
+++ b/app/src/main/res/layout/item_knowledge_adapter.xml
@@ -15,10 +15,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="12dp"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:textColor="@color/color_333333"
         android:id="@+id/tv_title"/>
 
     <TextView
+        android:textColor="@color/color_666666"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
