--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_primary">#1296db</color>
+    <color name="color_primary">#3498DB</color>
+    <color name="color_333333">#333333</color>
+    <color name="color_666666">#666666</color>
     <color name="color_background">#e5e5e5</color>
 </resources>
