--- a/app/src/main/res/layout/activity_test_databinding.xml
+++ b/app/src/main/res/layout/activity_test_databinding.xml
@@ -17,5 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/text_view"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Button
+                android:layout_marginBottom="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:text="粒子动画"
+                android:id="@+id/btn_anim"/>
+        </FrameLayout>
     </LinearLayout>
 </layout>
